[CRD iOS] Initialize HostListService::state_

HostListService::state_ is uninitialized when the instance is created.
For some reason it hasn't caused any flakiness in the current unit test
set, but I can see it start failing when I try to add new tests.

This CL initializes state_ to State::NOT_FETCHED.

Bug: 871443
Change-Id: I7eb3d69483baeb8ae0918122b5ba61300705be87
Reviewed-on: https://chromium-review.googlesource.com/1164181
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580992}
Former-commit-id: 45521c75f25b91ef644a78363339061a8aae1b9e